--- a/login.html
+++ b/login.html
@@ -60,10 +60,10 @@
                   </form>
                   <hr>
                   <div class="text-center">
-                    <a class="small" href="forgot-password.html">Forgot Password?</a>
+                    <a class="small" href="forgot-password.html">Recordar Contraseña</a>
                   </div>
                   <div class="text-center">
-                    <a class="small" href="register.html">Create an Account!</a>
+                    <a class="small" href="register.html">Crear Usuario</a>
                   </div>
                 </div>
               </div>
