--- a/register.html
+++ b/register.html
@@ -62,7 +62,7 @@
               </form>
               <hr>
               <div class="text-center">
-                <a class="small" href="forgot-password.html">Olvidó su contraseña?</a>
+                <a class="small" href="forgot-password.html">Olvidó su Contraseña?</a>
               </div>
               <div class="text-center">
                 <a class="small" href="login.html">Tienes una cuenta? Ingresa!</a>
