--- a/Inicio.html
+++ b/Inicio.html
@@ -39,6 +39,12 @@
       <!-- Divider -->
       <hr class="sidebar-divider my-0">
 
+      <li class="nav-item">
+        <a class="nav-link" href="Nosotros.html">
+          <i class="fas fa-fw fa-chart-area"></i>
+          <span>Nosotros</span></a>
+      </li>
+
       <!-- Nav Item - Dashboard -->
       <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
