--- a/Nosotros.html
+++ b/Nosotros.html
@@ -41,6 +41,11 @@
 
       <!-- Nav Item - Dashboard -->
       
+      <li class="nav-item">
+        <a class="nav-link" href="Nosotros.html">
+          <i class="fas fa-fw fa-chart-area"></i>
+          <span>Nosotros</span></a>
+      </li>
 
       <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
