--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
                         <label class="custom-control-label" for="customCheck">Recordar</label>
                       </div>
                     </div>
-                    <a href="index.html" class="btn btn-primary btn-user btn-block">
+                    <a href="Nosotros.html" class="btn btn-primary btn-user btn-block">
                       Ingresar
                     </a>
                     <hr>
