--- a/Nosotros.html
+++ b/Nosotros.html
@@ -41,7 +41,7 @@
 
       <!-- Nav Item - Dashboard -->
       
-      <li class="nav-item">
+      <li class="nav-item" active>
         <a class="nav-link" href="Nosotros.html">
           <i class="fas fa-fw fa-chart-area"></i>
           <span>Nosotros</span></a>
@@ -59,7 +59,7 @@
         </div>
       </li>
 
-      <li class="nav-item active">
+      <li class="nav-item ">
         <a class="nav-link" href="index.html">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Estadisticas</span></a>
