--- a/Nosotros.html
+++ b/Nosotros.html
@@ -29,7 +29,7 @@
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
       <!-- Sidebar - Brand -->
-      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="Nosotros.html">
+      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
         <div class="sidebar-brand-icon rotate-n-15">
           <i class="fas fa-laugh-wink"></i>
         </div>
@@ -41,7 +41,7 @@
 
       <!-- Nav Item - Dashboard -->
       
-      <li class="nav-item" active>
+      <li class="nav-item active" >
         <a class="nav-link" href="Nosotros.html">
           <i class="fas fa-fw fa-chart-area"></i>
           <span>Nosotros</span></a>
