--- a/Nosotros.html
+++ b/Nosotros.html
@@ -29,7 +29,7 @@
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
       <!-- Sidebar - Brand -->
-      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="Nosotros.html">
         <div class="sidebar-brand-icon rotate-n-15">
           <i class="fas fa-laugh-wink"></i>
         </div>
@@ -93,7 +93,14 @@
     <div id="content-wrapper" class="d-flex flex-column">
       <div id="content">
         <div class="container-fluid">
-          <h1 class="h3 mb-4 text-gray-800">Blank Page</h1>
+          <h1 class="h3 mb-4 text-gray-800">ANTECEDENTES</h1>
+          <span style="text-align: justify;|">
+            Actualmente enfrentamos una terrible crisis que ha afectado a nivel mundial a todos los países en todos los ámbitos y sectores. En nuestro país y en el mundo uno de los sectores mas golpeados es el sector de la Salud, afectando a instituciones, trabajadores y pacientes. 
+            Uno de los procesos en el sector de la salud que presenta un grave problema es el proceso de adquisición y dotación de pintas de sangre para los pacientes que requieran de estas.  
+            Debido a esta crisis sanitaria a la que estamos enfrentando todos, se ve muy afectado el proceso de donación voluntarias de sangre, por ende, el de adquisición de pintas de sangre por la falta de las mismas. 
+            En nuestro país el mayor Banco de Sangre lo posee la Cruz Roja Ecuatoriana, la cual provee servicios a Instituciones de Salud sean clínicas o privadas, así como a pacientes particulares. 
+            Debido a esta situación que estamos viviendo, actualmente es muy difícil que un paciente pueda conseguir fácilmente una pinta de sangre que requiera, debido a los escases de las mismas. 
+          </span>
         </div>
       </div>
       <!-- End of Main Content -->
@@ -102,7 +109,7 @@
       <footer class="sticky-footer bg-white">
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
-            <span>Copyright &copy; Your Website 2019</span>
+            <span>MSIG-XXI - GRUPO 7</span>
           </div>
         </div>
       </footer>
