--- a/Nosotros.html
+++ b/Nosotros.html
@@ -283,7 +283,7 @@
 
           <!-- Page Heading -->
           <h1 class="h3 mb-4 text-gray-800">ANTECEDENTES </h1>
-          <span style="text-align: justify;|">
+          <span style="text-align: justify;">
             Actualmente enfrentamos una terrible crisis que ha afectado a nivel mundial a todos los países en todos los ámbitos y sectores. En nuestro país y en el mundo uno de los sectores mas golpeados es el sector de la Salud, afectando a instituciones, trabajadores y pacientes. 
             Uno de los procesos en el sector de la salud que presenta un grave problema es el proceso de adquisición y dotación de pintas de sangre para los pacientes que requieran de estas.  
             Debido a esta crisis sanitaria a la que estamos enfrentando todos, se ve muy afectado el proceso de donación voluntarias de sangre, por ende, el de adquisición de pintas de sangre por la falta de las mismas. 
