--- a/Nosotros.html
+++ b/Nosotros.html
@@ -249,7 +249,7 @@
             <li class="nav-item dropdown no-arrow">
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">Administrador</span>
-                <img class="img-profile rounded-circle" src="https://i.ibb.co/0shy3Jn/png-transparent-computer-icons-organization-activity-miscellaneous-image-file-formats-computer.png">
+                <img class="img-profile rounded-circle" src="https://i.ibb.co/545HqQR/unnamed-2.png">
               </a>
               <!-- Dropdown - User Information -->
               <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
