--- a/Nosotros.html
+++ b/Nosotros.html
@@ -106,7 +106,7 @@
           <!-- Topbar Search -->
           <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
             <div class="input-group">
-              <h1>Cruz Roja - Sistema de Donantes</h1>
+              <b>Cruz Roja - Sistema de Donantes</b>
             </div>
             </div>
           </form>
