--- a/Nosotros.html
+++ b/Nosotros.html
@@ -106,8 +106,8 @@
           <!-- Topbar Search -->
           <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
             <div class="input-group">
-              <b>Cruz Roja - Sistema de Donantes</b>
-            </div>
+              &nbps;
+              </div>
             </div>
           </form>
 
