--- a/Nosotros.html
+++ b/Nosotros.html
@@ -127,7 +127,7 @@
               <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in" aria-labelledby="searchDropdown">
                 <form class="form-inline mr-auto w-100 navbar-search">
                   <div class="input-group">
-                    Cruz Roja - Sistema de Donantes 
+                    <h3>Cruz Roja - Sistema de Donantes </h3>
                   </div>
                 </form>
               </div>
@@ -296,7 +296,7 @@
       <footer class="sticky-footer bg-white">
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
-            <span>Copyright &copy; Your Website 2019</span>
+            <span>MSIG XXI - GRUPO 7</span>
           </div>
         </div>
       </footer>
