--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body class="bg-gradient-primary">
+<body class="bg-gradient-danger">
 
   <div class="container">
 
@@ -84,7 +84,7 @@
   <!-- Core plugin JavaScript-->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-  <!-- Custom scripts for all pages--> 
+  <!-- Custom scripts for all pages--> .bg-gradient-danger
   <script src="js/sb-admin-2.min.js"></script>
 
 </body>
