--- a/login.html
+++ b/login.html
@@ -84,7 +84,7 @@
   <!-- Core plugin JavaScript-->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-  <!-- Custom scripts for all pages--> .bg-gradient-danger
+  <!-- Custom scripts for all pages--> 
   <script src="js/sb-admin-2.min.js"></script>
 
 </body>
