--- a/login.html
+++ b/login.html
@@ -60,10 +60,10 @@
                   </form>
                   <hr>
                   <div class="text-center">
-                    <a class="small" href="forgot-password.html">Recordar Contraseña</a>
+                    <a class="small" href="forgot-password.html"><font style="color:##99A3A4">Recordar Contraseña</font></a>
                   </div>
                   <div class="text-center">
-                    <a class="small" href="register.html">Crear Usuario </a>
+                    <a class="small" href="register.html"><font style="color:##99A3A4">Crear Usuario</font></a>
                   </div>
                 </div>
               </div>
