--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -41,8 +41,13 @@
 
       <!-- Nav Item - Dashboard -->
       
+      <li class="nav-item" >
+        <a class="nav-link" href="Nosotros.html">
+          <i class="fas fa-fw fa-chart-area"></i>
+          <span>Nosotros</span></a>
+      </li>
 
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
           <i class="fas fa-fw fa-folder"></i>
           <span>Donantes</span>
