--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -272,7 +272,7 @@
         <div class="container-fluid">
 
           <!-- Page Heading -->
-          <h1 class="h3 mb-4 text-gray-800">Blank Page</h1>
+          <h1 class="h3 mb-4 text-gray-800"><b><font style="color:#B03A2E">Nuevo Donantes</b></font></h1>
           <form class="user">
                 <div class="form-group row">
                   <div class="col-sm-6 mb-3 mb-sm-0">
