--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -272,7 +272,7 @@
         <div class="container-fluid">
 
           <!-- Page Heading -->
-          <h1 class="h3 mb-4 text-gray-800"><b><font style="color:#B03A2E">Nuevo Donantes</b></font></h1>
+          <h1 class="h3 mb-4 text-gray-800"><b><font style="color:#B03A2E">Nuevo Donante</b></font></h1>
           <form class="user">
                 <div class="form-group row">
                   <div class="col-sm-6 mb-3 mb-sm-0">
@@ -282,18 +282,32 @@
                     <input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Apellido">
                   </div>
                 </div>
+                <div class="form-group row">
+                  <div class="col-sm-6 mb-3 mb-sm-0">
+                    <input type="text" class="form-control form-control-user" id="exampleLugNacimiento" placeholder="Lugar de Nacimiento">
+                  </div>
+                  <div class="col-sm-6">
+                    <input type="text" class="form-control form-control-user" id="exampleFechaNac" placeholder="Fecha de Nacimiento">
+                  </div>
+                </div>
                 <div class="form-group">
                   <input type="email" class="form-control form-control-user" id="exampleInputEmail" placeholder="Correo">
                 </div>
+                <div class="form-group">
+                  <input type="text" class="form-control form-control-user" id="exampleDomicilio" placeholder="Domicilio">
+                </div>
                 <div class="form-group row">
                   <div class="col-sm-6 mb-3 mb-sm-0">
-                    <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Contraseña">
+                    <input type="text" class="form-control form-control-user" id="exampleProvincia" placeholder="Provincia">
                   </div>
                   <div class="col-sm-6">
-                    <input type="password" class="form-control form-control-user" id="exampleRepeatPassword" placeholder="Repetir Contraseña">
+                    <input type="text" class="form-control form-control-user" id="exampleCiudad" placeholder="Ciudad">
+                  </div>
+                  <div class="col-sm-6">
+                    <input type="text" class="form-control form-control-user" id="exampleCanton" placeholder="Cantón">
                   </div>
                 </div>
-                <a href="login.html" class="btn btn-primary btn-user btn-block">
+                <a href="login.html" class="btn btn-danger btn-user btn-block">
                   Registrar
                 </a>
                 <hr>
