--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -298,7 +298,12 @@
                 </div>
                 <div class="form-group row">
                   <div class="col-sm-4 mb-3 mb-sm-0">
-                    <input type="text" class="form-control form-control-user" id="exampleProvincia" placeholder="Provincia">
+                    <select class="form-control form-control-user" name="exampleProvincia" id="exampleProvincia">
+                    	<option selected>Seleccione</option>
+                        <option>Guayas</option>
+                        <option>Esmeraldas</option>
+                        <option>Manabi</option>
+                        </select>
                   </div>
                   <div class="col-sm-4">
                     <input type="text" class="form-control form-control-user" id="exampleCiudad" placeholder="Ciudad">
