--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -298,7 +298,7 @@
                 </div>
                 <div class="form-group row">
                   <div class="col-sm-4 mb-3 mb-sm-0">
-                    <select class="animated--fade-in" name="exampleProvincia" id="exampleProvincia">
+                    <select class="form-control form-control-user" name="exampleProvincia" id="exampleProvincia">
                     	<option selected>Seleccione</option>
                         <option>Guayas</option>
                         <option>Esmeraldas</option>
