--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -294,11 +294,11 @@
                   <input type="email" class="form-control form-control-user" id="exampleInputEmail" placeholder="Correo">
                 </div>
                 <div class="form-group">
-                  <input type="text" class="form-control form-control-user" id="exampleDomicilio" placeholder="Domicilio">
+                  <input type="text" class="dropdown-menu animated--fade-in show" id="exampleDomicilio" placeholder="Domicilio">
                 </div>
                 <div class="form-group row">
                   <div class="col-sm-4 mb-3 mb-sm-0">
-                    <select class="form-control form-control-user" name="exampleProvincia" id="exampleProvincia">
+                    <select class="animated--fade-in" name="exampleProvincia" id="exampleProvincia">
                     	<option selected>Seleccione</option>
                         <option>Guayas</option>
                         <option>Esmeraldas</option>
