--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -297,7 +297,7 @@
                   <input type="text" class="dropdown-menu animated--fade-in show" id="exampleDomicilio" placeholder="Domicilio">
                 </div>
                 <div class="form-group row">
-                  <div class="dropdown mb-4">
+                  <div class="col-sm-4">
                     <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Dropdown
                     </button>
