--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -298,8 +298,8 @@
                 </div>
                 <div class="form-group row">
                   <div class="col-sm-4">
-                    <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Dropdown
+                    <button class="form-control form-control-user btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Provincia
                     </button>
                     <div class="dropdown-menu animated--fade-in" aria-labelledby="dropdownMenuButton">
                       <a class="dropdown-item" href="#">Action</a>
