--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -299,19 +299,15 @@
                 <div class="form-group row">
                   <div class="col-sm-4">
                     <nav class="navbar navbar-expand navbar-light bg-light mb-4">
-                    <a class="navbar-brand" href="#">Provincias</a>
                     <ul class="navbar-nav ml-auto">
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Seleccione
+                          Seleccione Provincia
                         </a>
                         <div class="dropdown-menu dropdown-menu-right animated--fade-in" aria-labelledby="navbarDropdown">
                           <a class="dropdown-item" href="#">Esmeraldas</a>
                           <a class="dropdown-item" href="#">Manabi</a>
                           <a class="dropdown-item" href="#">Guayas</a>
-                          <div class="dropdown-divider"></div>
-                          <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
                       </li>
                     </ul>
                   </nav>
