--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -304,7 +304,7 @@
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Seleccione Provincia
                         </a>
-                        <div class="dropdown-menu dropdown-menu-right animated--fade-in" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu dropdown-menu-left animated--fade-in" aria-labelledby="navbarDropdown">
                           <a class="dropdown-item" href="#">Esmeraldas</a>
                           <a class="dropdown-item" href="#">Manabi</a>
                           <a class="dropdown-item" href="#">Guayas</a>
