--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -297,7 +297,7 @@
                   <input type="text" class="dropdown-menu animated--fade-in show" id="exampleDomicilio" placeholder="Domicilio">
                 </div>
                 <div class="form-group row">
-                  <div class="col-sm-4">
+                  <div class="col-sm-4" align="left">
                     <nav class="navbar navbar-expand navbar-light bg-light mb-4">
                     <ul class="navbar-nav ml-auto">
                       <li class="nav-item dropdown">
