--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -301,9 +301,7 @@
                     <nav class="navbar navbar-expand navbar-light bg-light mb-4">
                     <ul class="navbar-nav ml-auto">
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Seleccione Provincia
-                        </a>
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Provincia</a>
                         <div class="dropdown-menu dropdown-menu-left animated--fade-in" aria-labelledby="navbarDropdown">
                           <a class="dropdown-item" href="#">Esmeraldas</a>
                           <a class="dropdown-item" href="#">Manabi</a>
