--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -296,19 +296,19 @@
                 <div class="form-group">
                   <input type="text" class="dropdown-menu animated--fade-in show" id="exampleDomicilio" placeholder="Domicilio">
                 </div>
-                <div class="form-group row">
+                <div class="form-group row"  align="left">
                   <div class="col-sm-4" align="left">
-                    <nav class="navbar navbar-expand navbar-light bg-light mb-4">
-                    <ul class="navbar-nav ml-auto">
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Provincia</a>
-                        <div class="dropdown-menu dropdown-menu-left animated--fade-in" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="#">Esmeraldas</a>
-                          <a class="dropdown-item" href="#">Manabi</a>
-                          <a class="dropdown-item" href="#">Guayas</a>
-                      </li>
-                    </ul>
-                  </nav>
+                    <div class="small mb-1">Dropdown Button Example:</div>
+                  <div class="dropdown mb-4">
+                    <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Seleccione Provincia
+                    </button>
+                    <div class="dropdown-menu animated--fade-in" aria-labelledby="dropdownMenuButton">
+                      <a class="dropdown-item" href="#">Esmeraldas</a>
+                      <a class="dropdown-item" href="#">Manabi</a>
+                      <a class="dropdown-item" href="#">Guayas</a>
+                    </div>
+                  </div>
                   </div>
                   <div class="col-sm-4">
                     <input type="text" class="form-control form-control-user" id="exampleCiudad" placeholder="Ciudad">
