--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -299,7 +299,7 @@
                 <div class="form-group row"  align="left">
                   <div class="col-sm-4" align="left">
                   <div class="dropdown mb-4">
-                    <button class="btn btn-danger dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Seleccione Provincia
                     </button>
                     <div class="dropdown-menu animated--fade-in" aria-labelledby="dropdownMenuButton">
