--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -298,16 +298,12 @@
                 </div>
                 <div class="form-group row"  align="left">
                   <div class="col-sm-4" align="left">
-                  <div class="dropdown mb-4">
-                    <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Seleccione Provincia
-                    </button>
-                    <div class="dropdown-menu animated--fade-in" aria-labelledby="dropdownMenuButton">
-                      <a class="dropdown-item" href="#">Esmeraldas</a>
-                      <a class="dropdown-item" href="#">Manabi</a>
-                      <a class="dropdown-item" href="#">Guayas</a>
-                    </div>
-                  </div>
+                  	<select class="btn btn-light dropdown-toggle"  name="exampleProvincia">
+                        <option selected>Seleccione Provincia</option>
+                        <option>Esmeraldas</option>
+                        <option>Manabi</option>
+                        <option>Guayas</option>
+                    </select>
                   </div>
                   <div class="col-sm-4">
                     <input type="text" class="form-control form-control-user" id="exampleCiudad" placeholder="Ciudad">
