--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -298,7 +298,7 @@
                 </div>
                 <div class="form-group row"  align="left">
                   <div class="col-sm-4" align="left">
-                  	<select class="btn btn-light dropdown-toggle"  name="exampleProvincia">
+                  	<select class="btn btn-light dropdown-menu animated--fade-in show"  name="exampleProvincia">
                         <option selected>Seleccione Provincia</option>
                         <option>Esmeraldas</option>
                         <option>Manabi</option>
