--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -287,29 +287,35 @@
                     <input type="text" class="form-control form-control-user" id="exampleLugNacimiento" placeholder="Lugar de Nacimiento">
                   </div>
                   <div class="col-sm-4">
-                    <input type="text" class="form-control form-control-user" id="exampleFechaNac" placeholder="Fecha de Nacimiento">
+                    <input type="date" class="form-control form-control-user" id="exampleFechaNac" placeholder="Fecha de Nacimiento">
                   </div>
                 </div>
-                <div class="form-group">
-                  <input type="email" class="form-control form-control-user" id="exampleInputEmail" placeholder="Correo">
+                <div class="form-group row">
+                  <div class="col-sm-4 mb-3 mb-sm-0">
+                    <input type="email" class="form-control form-control-user" id="exampleEmail" placeholder="Email">
+                  </div>
+                  <div class="col-sm-4">
+                    <input type="text" class="form-control form-control-user" id="exampleDomicilio" placeholder="Domicilio">
+                  </div>
                 </div>
-                <div class="form-group">
-                  <input type="text" class="dropdown-menu animated--fade-in show" id="exampleDomicilio" placeholder="Domicilio">
-                </div>  
                 <div class="form-group row"  align="left">
-                  <div class="col-sm-2.66" align="left">
+                  <div class="col-sm-3" align="left">
                   	<select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:thin;" name="exampleProvincia">
                         <option selected>Seleccione Provincia</option>
-                        <option>Esmeraldas</option>
-                        <option>Manabi</option>
                         <option>Guayas</option>
                     </select>
                   </div>
-                  <div class="col-sm-2.66">
-                    <input type="text" class="form-control form-control-user" id="exampleCiudad" placeholder="Ciudad">
+                  <div class="col-sm-3">
+                    <select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:thin;" name="exampleCiudad">
+                        <option selected>Seleccione Ciudad</option>
+                        <option>Guayaquil</option>
+                    </select>
                   </div>
-                  <div class="col-sm-2.66">
-                    <input type="text" class="form-control form-control-user" id="exampleCanton" placeholder="Cantón">
+                  <div class="col-sm-3">
+                    <select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:thin;" name="exampleCanton">
+                        <option selected>Seleccione Cant&oacute;n</option>
+                        <option>Guayas</option>
+                    </select>
                   </div>
                 </div>
                 <a href="login.html" class="btn btn-danger btn-user btn-block">
