--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -273,7 +273,29 @@
 
           <!-- Page Heading -->
           <h1 class="h3 mb-4 text-gray-800"><b><font style="color:#B03A2E">Nuevo Donante</font></b></h1>
-          <form class="user">
+          <table width="100%" border="1">
+          <tr>
+            <td width="10%">&nbsp;</td>
+            <td width="10%">&nbsp;</td>
+            <td width="10%">&nbsp;</td>
+            <td width="10%">&nbsp;</td>
+            <td width="4%">&nbsp;</td>
+            <td width="46%">&nbsp;</td>
+          </tr>
+          <tr>
+            <td colspan="4">&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td colspan="4">&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+        </table>
+
+          
+          <!--<form class="user">
                 <div class="form-group row">
                   <div class="col-sm-4 mb-3 mb-sm-0">
                     <input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="Nombre">
@@ -323,7 +345,7 @@
                 </a>
                 <hr>
                 
-              </form>
+              </form>-->
         </div>
         <!-- /.container-fluid -->
 
