--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -273,14 +273,18 @@
 
           <!-- Page Heading -->
           <h1 class="h3 mb-4 text-gray-800"><b><font style="color:#B03A2E">Nuevo Donante</font></b></h1>
-          <table width="100%" border="1">
+          <table class="user" width="100%" border="1">
           <tr>
-            <td width="10%">&nbsp;</td>
-            <td width="10%">&nbsp;</td>
-            <td width="10%">&nbsp;</td>
-            <td width="10%">&nbsp;</td>
-            <td width="4%">&nbsp;</td>
-            <td width="46%">&nbsp;</td>
+            <td width="10%">Nombre</td>
+            <td width="12%"><div class="col-sm-4 mb-3 mb-sm-0">
+                            <input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="Nombre">
+                            </div></td>
+            <td width="10%">Apellido</td>
+            <td width="12%"><div class="col-sm-4">
+                    		<input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Apellido">
+                  			</div></td>
+            <td width="2%">&nbsp;</td>
+            <td width="44%">&nbsp;</td>
           </tr>
           <tr>
             <td colspan="4">&nbsp;</td>
