--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -276,13 +276,15 @@
           <table class="user" width="100%" border="1">
           <tr>
             <td width="10%">Nombre</td>
-            <td width="12%"><div class="col-sm-4 mb-3 mb-sm-0">
+            <td width="12%">
+            <div class="form-group">
+            <div class="col-sm-4 mb-3 mb-sm-0">
                             <input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="Nombre">
-                            </div></td>
+                            </div></div></td>
             <td width="10%">Apellido</td>
-            <td width="12%"><div class="col-sm-4">
+            <td width="12%"><div class="form-group"><div class="col-sm-4">
                     		<input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Apellido">
-                  			</div></td>
+                  			</div></div></td>
             <td width="2%">&nbsp;</td>
             <td width="44%">&nbsp;</td>
           </tr>
