--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -275,15 +275,10 @@
           <h1 class="h3 mb-4 text-gray-800"><b><font style="color:#B03A2E">Nuevo Donante</font></b></h1>
           <table class="user" width="100%" border="1">
           <tr>
-            <td width="10%">Nombre</td>
-            <td width="12%">
-            
-                            <input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="Nombre">
-                            </td>
-            <td width="10%">Apellido</td>
-            <td width="12%">
-                    		<input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Apellido">
-                  			</td>
+            <td width="7%">Nombre</td>
+            <td width="15%"><input type="text" class="form-control form-control-user" id="exampleFirstName"></td>
+            <td width="7%">Apellido</td>
+            <td width="15%"><input type="text" class="form-control form-control-user" id="exampleLastName"></td>
             <td width="2%">&nbsp;</td>
             <td width="44%">&nbsp;</td>
           </tr>
