--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -273,26 +273,37 @@
 
           <!-- Page Heading -->
           <h1 class="h3 mb-4 text-gray-800"><b><font style="color:#B03A2E">Nuevo Donante</font></b></h1>
-          <table class="user" width="100%" border="1">
+          <table class="user" width="100%" border="0s">
           <tr>
-            <td width="7%">Nombre</td>
-            <td width="15%"><input type="text" class="form-control form-control-user" id="exampleFirstName"></td>
-            <td width="7%">Apellido</td>
-            <td width="15%"><input type="text" class="form-control form-control-user" id="exampleLastName"></td>
+            <td width="7%">Cedula</td>
+            <td width="17%"><input type="text" class="form-control form-control-user" id="exampleCedula"></td>
+            <td width="7%">Sexo</td>
+            <td width="17%"><select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleProvincia">
+                        	<option selected>Seleccione</option>
+                        	<option>Masculino</option>
+                            <option>Femenino</option>
+                    		</select></td>
             <td width="2%">&nbsp;</td>
-            <td width="44%">&nbsp;</td>
+            <td width="40%">&nbsp;</td>
           </tr>
           <tr>
-            <td colspan="4">&nbsp;</td>
+            <td>Nombre</td>
+            <td><input type="text" class="form-control form-control-user" id="exampleFirstName"></td>
+            <td>Apellido</td>
+            <td><input type="text" class="form-control form-control-user" id="exampleLastName"></td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
           </tr>
           <tr>
-            <td colspan="4">&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
           </tr>
-        </table>
+          
+          </table>
 
           
           <!--<form class="user">
