--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -275,9 +275,9 @@
           <h1 class="h3 mb-4 text-gray-800"><b><font style="color:#B03A2E">Nuevo Donante</font></b></h1>
           <table class="user" width="100%" border="0s">
           <tr>
-            <td width="7%">Cedula</td>
+            <td width="7%">&nbsp;<b>Cedula</b></td>
             <td width="17%"><input type="text" class="form-control form-control-user" id="exampleCedula"></td>
-            <td width="7%">Sexo</td>
+            <td width="7%">&nbsp;<b>Sexo</b></td>
             <td width="17%"><select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleProvincia">
                         	<option selected>Seleccione</option>
                         	<option>Masculino</option>
@@ -287,9 +287,9 @@
             <td width="40%">&nbsp;</td>
           </tr>
           <tr>
-            <td>Nombre</td>
+            <td>&nbsp;<b>Nombre</b></td>
             <td><input type="text" class="form-control form-control-user" id="exampleFirstName"></td>
-            <td>Apellido</td>
+            <td>&nbsp;<b>Apellido</b></td>
             <td><input type="text" class="form-control form-control-user" id="exampleLastName"></td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
