--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -273,7 +273,7 @@
 
           <!-- Page Heading -->
           <h1 class="h3 mb-4 text-gray-800"><b><font style="color:#B03A2E">Nuevo Donante</font></b></h1>
-          <table class="user" width="100%" border="0s">
+          <table class="user" width="100%" style=" border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px">
           <tr>
             <td width="7%">&nbsp;<b>Cedula</b></td>
             <td width="17%"><input type="text" class="form-control form-control-user" id="exampleCedula"></td>
