--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -276,7 +276,7 @@
           <table class="user" width="100%" style=" border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px">
           <tr>
             <td width="7%">&nbsp;<b>Cedula</b></td>
-            <td width="17%"><input type="text" class="form-control form-control-user" id="exampleCedula"></td>
+            <td width="17%"><input type="number" class="form-control form-control-user" id="exampleCedula"></td>
             <td width="7%">&nbsp;<b>Sexo</b></td>
             <td width="17%"><select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleProvincia">
                         	<option selected>Seleccione</option>
