--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -273,7 +273,12 @@
 
           <!-- Page Heading -->
           <h1 class="h3 mb-4 text-gray-800"><b><font style="color:#B03A2E">Nuevo Donante</font></b></h1>
-          <table class="user" width="100%" style=" border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px">
+          <table class="user" width="100%" >
+          <tr>
+            <td colspan="4" align="center" style=";border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px">Datos Personales</td>
+            <td>&nbsp;</td>
+            <td align="center" style="border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px">Pol&iacute;ticas para el Donante</td>
+          </tr>
           <tr>
             <td width="7%">&nbsp;<b>Cedula</b></td>
             <td width="17%"><input type="number" class="form-control form-control-user" id="exampleCedula"></td>
