--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -283,7 +283,7 @@
             <td width="7%">&nbsp;<b>Cedula</b></td>
             <td width="17%"><input type="number" class="form-control form-control-user" id="exampleCedula"></td>
             <td width="7%">&nbsp;<b>Sexo</b></td>
-            <td width="17%"><select class="btn btn-secondary dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleProvincia">
+            <td width="17%"><select class="btn btn-success dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleProvincia">
                         	<option selected>Seleccione</option>
                         	<option>Masculino</option>
                             <option>Femenino</option>
