--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -275,9 +275,9 @@
           <h1 class="h3 mb-4 text-gray-800"><b><font style="color:#B03A2E">Nuevo Donante</font></b></h1>
           <table class="user" width="100%" >
           <tr>
-            <td colspan="4" align="center" style=";border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><b>Datos Personales</b></td>
+            <td colspan="4" align="center" style="color:#333;background-color:#CCC;border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><b>Datos Personales</b></td>
             <td>&nbsp;</td>
-            <td align="center" style="border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><b>Pol&iacute;ticas para el Donante</b></td>
+            <td align="center" style="color:#333;background-color:#CCC;border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><b>Pol&iacute;ticas para el Donante</b></td>
           </tr>
           <tr>
             <td width="7%">&nbsp;<b>Cedula</b></td>
