--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -300,14 +300,29 @@
             <td>&nbsp;</td>
           </tr>
           <tr>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+              <td>&nbsp;<b>Lugar de Nacimiento</b></td>
+            <td><input type="text" class="form-control form-control-user" id="exampleLugNac"></td>
+            <td>&nbsp;<b>Localidad</b></td>
+            <td><input type="text" class="form-control form-control-user" id="exampleLocalidad"></td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
           </tr>
-          
+          <tr>
+              <td>&nbsp;<b>Fecha Nacimiento</b></td>
+            <td><input type="date" class="form-control form-control-user" id="exampleFecNac"></td>
+            <td>&nbsp;<b>Telefono</b></td>
+            <td><input type="text" class="form-control form-control-user" id="exampleTelefono"></td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+              <td>&nbsp;<b>Email</b></td>
+            <td><input type="email" class="form-control form-control-user" id="exampleEmail"></td>
+            <td>&nbsp;<b>C&oacute;digo Postal</b></td>
+            <td><input type="text" class="form-control form-control-user" id="exampleCodPostal"></td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
           </table>
 
           
