--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -294,8 +294,8 @@
             <td width="40%">&nbsp;</td>
           </tr>
           <tr>
-            <td colspan="2"><b>Sexo</b>&nbsp;<select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleProvincia">
-                        	<option selected>Seleccione</option>
+            <td colspan="2"><select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleProvincia">
+                        	<option selected>Seleccione Sexo</option>
                         	<option>Masculino</option>
                             <option>Femenino</option>
                     		</select></td>
