--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -285,15 +285,17 @@
             <td width="8%">&nbsp;</td>
             <td width="18%">&nbsp;</td>
             <td>&nbsp;</td>
-            <td width="35%">¿Don&oacute; sangre en los 3 &uacute;ltimos a&ntilde;os?</td>
-            <td width="5%"><input name="Si" type="checkbox" value="1"> Si</td>
-            <td width="5%"><input name="No" type="checkbox" value="0"> No</td>
+            <td width="35%">&nbsp;</td>
+            <td width="5%">&nbsp;</td>
+            <td width="5%">&nbsp;</td>
           </tr>
           <tr>
             <td colspan="2"><input type="number" class="form-control form-control-user" id="exampleCedula" placeholder="C&eacute;dula"></td>
             <td colspan="2">&nbsp;</td>
             <td width="3%">&nbsp;</td>
-            <td colspan="3">&nbsp;</td>
+            <td>¿Don&oacute; sangre en los 3 &uacute;ltimos a&ntilde;os?</td>
+            <td><input name="Si" type="checkbox" value="1"> Si</td>
+            <td><input name="No" type="checkbox" value="0"> No</td>
           </tr>
           <tr>
             <td colspan="2"><select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleProvincia">
@@ -303,31 +305,41 @@
                     		</select></td>
             <td colspan="2">&nbsp;</td>
             <td>&nbsp;</td>
-            <td colspan="3">&nbsp;</td>
+            <td>¿En los 12 &uacute;ltimos meses ha donado sangre a esta Instituci&oacute;n?</td>
+            <td><input name="Si" type="checkbox" value="1"> Si</td>
+            <td><input name="No" type="checkbox" value="0"> No</td>
           </tr>
           <tr>
             <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="Nombre"></td>
             <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Apellido"></td>
             <td>&nbsp;</td>
-            <td colspan="3">&nbsp;</td>
+            <td>¿Ha donado sangre los 2 &uacute;ltimos meses?</td>
+            <td><input name="Si" type="checkbox" value="1"> Si</td>
+            <td><input name="No" type="checkbox" value="0"> No</td>
           </tr>
           <tr>
               <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleLugNac" placeholder="Lugar de Nacimiento"></td>
             <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleLocalidad" placeholder="Localidad"></td>
             <td>&nbsp;</td>
-            <td colspan="3">&nbsp;</td>
+            <td>¿Recibe vacunas, antibioticos u otros medicamentos en especial para (ca&iacute;da de cabello,acn&eacute;,psoriasis u otros transtornos)?</td>
+            <td><input name="Si" type="checkbox" value="1"> Si</td>
+            <td><input name="No" type="checkbox" value="0"> No</td>
           </tr>
           <tr>
               <td colspan="2"><input type="date" class="form-control form-control-user" id="exampleFecNac" placeholder="Fecha Nacimiento"></td>
             <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleTelefono" placeholder="Tel&eacute;fono"></td>
             <td>&nbsp;</td>
-            <td colspan="3">&nbsp;</td>
+            <td><b>Impedimentos para donar</b></td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
           </tr>
           <tr>
               <td colspan="2"><input type="email" class="form-control form-control-user" id="exampleEmail" placeholder="Email"></td>
             <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleCodPostal" placeholder="C&oacute;digo Postal"></td>
             <td>&nbsp;</td>
-            <td colspan="3">&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
           </tr>
           </table>
 
