--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -346,7 +346,7 @@
                         	<option selected>Ciudad</option>
                         	<option>Guayaquil</option>
                     		</select></td>
-            <td><select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleCanton">
+            <td><select style="border-bottom:1px" class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleCanton">
                         	<option selected>Cant&oacute;n</option>
                         	<option>Guayaquil</option>
                     		</select></td>
