--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -319,7 +319,7 @@
               <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleLugNac" placeholder="Lugar de Nacimiento"></td>
             <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleLocalidad" placeholder="Localidad"></td>
             <td>&nbsp;</td>
-            <td>¿Recibe vacunas, antibioticos u otros medicamentos en especial para (ca&iacute;da de cabello,acn&eacute;,psoriasis u otros transtornos)?</td>
+            <td>¿Recibe vacunas, antibioticos u otros medicamentos?</td>
             <td><input name="Si" type="checkbox" value="1"> Si</td>
             <td><input name="No" type="checkbox" value="0"> No</td>
           </tr>
@@ -342,11 +342,11 @@
                         	<option selected>Provincia</option>
                         	<option>Guayas</option>
                     		</select></td>
-            <td colspan="2"><select style="border-bottom:1px" class="form-control form-control-user" style="border-bottom:#999; border:1px;" name="exampleCiudad">
+            <td colspan="2"><select style="border-bottom:1px" class="form-control form-control-user" name="exampleCiudad">
                         	<option selected>Ciudad</option>
                         	<option>Guayaquil</option>
                     		</select></td>
-            <td><select style="border-bottom:1px" class="form-control form-control-user" style="border-bottom:#999; border:1px;" name="exampleCanton">
+            <td><select style="border-bottom:1px" class="form-control form-control-user" name="exampleCanton">
                         	<option selected>Cant&oacute;n</option>
                         	<option>Guayaquil</option>
                     		</select></td>
@@ -373,7 +373,9 @@
           </tr>
           </table>
 
-          
+          <a href="login.html" class="btn btn-danger btn-user btn-block">
+                  Registrar
+                </a>
           <!--<form class="user">
                 <div class="form-group row">
                   <div class="col-sm-4 mb-3 mb-sm-0">
