--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -356,8 +356,8 @@
             <td>&nbsp;</td>
           </tr>
           <tr>
-            <td colspan="2">&nbsp;</td>
-            <td colspan="2">&nbsp;</td>
+            <td colspan="2"><input type="text" class="form-control form-control-user" id="examplePacDonar" placeholder="Paciente a donar"></td>
+            <td colspan="2"><a href="https://imgbb.com/"><img src="https://i.ibb.co/2Ywympd/logo.png" alt="logo" border="0"></a></td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
