--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -357,14 +357,14 @@
           </tr>
           <tr>
             <td colspan="2"><input type="text" class="form-control form-control-user" id="examplePacDonar" placeholder="Paciente a donar"></td>
-            <td colspan="2">Guardar mi Ubicaci&oacute;n &nbsp;<a href="https://imgbb.com/"><img src="https://i.ibb.co/2Ywympd/logo.png" alt="logo" border="0" width="30px" height="30px"></a></td>
+            <td colspan="2">&nbsp;</td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
           </tr>
           <tr>
-            <td colspan="2">&nbsp;</td>
+            <td colspan="2">Guardar mi Ubicaci&oacute;n &nbsp;<a href="NuevoDonante.html"><img src="https://i.ibb.co/2Ywympd/logo.png" alt="logo" border="0" width="30px" height="30px"></a></td>
             <td colspan="2">&nbsp;</td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
@@ -373,60 +373,10 @@
           </tr>
           </table>
 
-          <a href="login.html" class="btn btn-danger btn-user btn-block">
+          <a href="NuevoDonante.html" class="btn btn-danger btn-user btn-block">
                   Registrar
                 </a>
-          <!--<form class="user">
-                <div class="form-group row">
-                  <div class="col-sm-4 mb-3 mb-sm-0">
-                    <input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="Nombre">
-                  </div>
-                  <div class="col-sm-4">
-                    <input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Apellido">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <div class="col-sm-4 mb-3 mb-sm-0">
-                    <input type="text" class="form-control form-control-user" id="exampleLugNacimiento" placeholder="Lugar de Nacimiento">
-                  </div>
-                  <div class="col-sm-4">
-                    <input type="date" class="form-control form-control-user" id="exampleFechaNac" placeholder="Fecha de Nacimiento">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <div class="col-sm-4 mb-3 mb-sm-0">
-                    <input type="email" class="form-control form-control-user" id="exampleEmail" placeholder="Email">
-                  </div>
-                  <div class="col-sm-4">
-                    <input type="text" class="form-control form-control-user" id="exampleDomicilio" placeholder="Domicilio">
-                  </div>
-                </div>
-                <div class="form-group row"  align="left">
-                  <div class="col-sm-3" align="left">
-                  	<select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:thin;" name="exampleProvincia">
-                        <option selected>Seleccione Provincia</option>
-                        <option>Guayas</option>
-                    </select>
-                  </div>
-                  <div class="col-sm-3">
-                    <select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:thin;" name="exampleCiudad">
-                        <option selected>Seleccione Ciudad</option>
-                        <option>Guayaquil</option>
-                    </select>
-                  </div>
-                  <div class="col-sm-3">
-                    <select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:thin;" name="exampleCanton">
-                        <option selected>Seleccione Cant&oacute;n</option>
-                        <option>Guayas</option>
-                    </select>
-                  </div>
-                </div>
-                <a href="login.html" class="btn btn-danger btn-user btn-block">
-                  Registrar
-                </a>
-                <hr>
-                
-              </form>-->
+          
         </div>
         <!-- /.container-fluid -->
 
