--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -364,7 +364,15 @@
             <td>&nbsp;</td>
           </tr>
           <tr>
-            <td colspan="2">Guardar mi Ubicaci&oacute;n &nbsp;<a href="NuevoDonante.html"><img src="https://i.ibb.co/2Ywympd/logo.png" alt="logo" border="0" width="30px" height="30px"></a></td>
+            <td colspan="2">&nbsp;&nbsp;Guardar mi Ubicaci&oacute;n &nbsp;<a href="NuevoDonante.html"><img src="https://i.ibb.co/2Ywympd/logo.png" alt="logo" border="0" width="30px" height="30px"></a></td>
+            <td colspan="2">&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td colspan="2">&nbsp;</td>
             <td colspan="2">&nbsp;</td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
